[package]
name = "certs"
version = "0.1.0-alpha2"
edition = "2021"
description = "CLI tool to debug server's SSL/TLS Certificates"
keywords = ["certs", "x509", "cli", "debug"]
license = "MIT"
readme = "README.md"
categories = ["web-programming"]

[lib]
name = "libcerts"
path = "src/lib.rs"

[[bin]]
name = "certs"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
native-tls = "0.2"
thiserror = "2"
url = "2.5"
x509-parser = "0.18.0"
